deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "verdict"
  labels:
    name: "verdict"
